--- a/package.json
+++ b/package.json
@@ -1,11 +1,34 @@
 {
   "name": "mesto",
   "version": "1.0.0",
-  "description": "------------------------ Интерактивный сайт, на котором пользователи могут выкладывать фотографии из своих путешествий по России. Включает в себя информационный блок с фотографией и основной информацией о пользователе, карточки с пользовательскими изображениями. Предусмотрены органоиды управления контентом – возможности загрузки новых фотокарточек и редактирования профиля, а также возможность отметить понравившееся фото \"лайком\", удалить существующие карточки и просмотреть изображения в оригинальном формате.",
+  "description": "Интерактивный сайт, на котором пользователи могут выкладывать фотографии из своих путешествий по России. Включает в себя информационный блок с фотографией и основной информацией о пользователе, карточки с пользовательскими изображениями. Предусмотрены органоиды управления контентом – возможности загрузки новых фотокарточек и редактирования профиля, а также возможность отметить понравившееся фото \"лайком\", удалить существующие карточки и просмотреть изображения в оригинальном формате.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --mode production",
+    "dev": "webpack serve --open --mode development"
   },
   "author": "",
-  "license": "ISC"
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/preset-env": "^7.21.5",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.4",
+    "cssnano": "^6.0.1",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.7.6",
+    "postcss-loader": "^7.3.0",
+    "postcss-preset-env": "^8.3.2",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.83.1",
+    "webpack-cli": "^5.1.1",
+    "webpack-dev-server": "^4.15.0"
+  },
+  "dependencies": {
+    "html-webpack-plugin": "^5.5.1"
+  },
+  "browserslist": [
+    "last 5 version",
+    "> 1%",
+    "not dead"
+  ]
 }
